<resources>
    <string name="app_name">Assignment 1</string>
    <string name="company_name">Adobe Illustrator</string>
    <string name="contact_number">+91 1234567890</string>
    <string name="company_mail">demand@mail.adobe.com</string>
    <string name="company_address">402, Ansal Chamber,\nBhikaji Cama Place, Delhi</string>
    <string name="company_logo">company_logo</string>
    <string name="company_description">"Learn about Adobe Illustrator, the industry-standard vector graphics app that lets you create logos, icons, drawings, typography, and complex illustrations for any medium. "</string>
    <string name="hyperlink_company"><a href="http://surl.li/cjygu">Visit Our Site</a></string>
</resources>